--- a/src/views/pages/cover.ejs
+++ b/src/views/pages/cover.ejs
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1 id="texto">Hola jeje</h1>
-    <script src="../public/main.js"></script>
+    <input type="submit" name="boton" value="boton">
+    <script src="/main.js"></script>
 </body>
 </html>
