--- a/src/views/pages/cover.ejs
+++ b/src/views/pages/cover.ejs
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rick and Morty</title>
+    <%- include("../partials/head.ejs")%>
 </head>
 <body>
+    <%- include("../partials/navigation.ejs")%>
     <h1 id="texto">Hola jeje</h1>
-    <input type="submit" name="boton" value="boton">
-    <script src="/main.js"></script>
+
 </body>
 </html>
