Agregué la pagina personalizar personajes

--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -15,8 +15,16 @@
           <li class="nav-item">
             <a class="nav-link" href="/pokemon">Pokemon</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link">Personalized</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Personalized
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="/personalized">Show all</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="/personalized/add">Add new</a></li>
+              <li><a class="dropdown-item" href="/personalized/modify">Modify</a></li>
+            </ul>
           </li>
         </ul>
       </div>
