--- a/src/views/pages/characters.ejs
+++ b/src/views/pages/characters.ejs
@@ -17,6 +17,6 @@
             <% }) %>
         </div>
     </main>
-    <%- include("../partials/footer.ejs"); %>
+    <%- include("../partials/footer.ejs") %>
 </body>
 </html>
