--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -5,4 +5,4 @@
 <!-- BOOTSTRAP -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!-- STYLES -->
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="/style.css">
